proxy/sslocal/sslocal.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sslocal
  name: sslocal
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: sslocal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sslocal
    spec:
      containers:
        - name: sslocal
          image: ghcr.io/shadowsocks/sslocal-rust:v1.25.0@sha256:56786760f6a1bc447c3bcdcac94d5e2e2ffdbdaacce14c38e819003d8bb125dc
          ports:
            - name: socks5-tcp
              containerPort: 1080
              protocol: TCP
            - name: socks5-udp
              containerPort: 1080
              protocol: UDP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL", "NET_RAW"]
            runAsUser: 1001
          volumeMounts:
            - mountPath: /etc/shadowsocks-rust/config.json
              name: config
              subPath: config.json
              readOnly: true
      securityContext:
        runAsNonRoot: true
      volumes:
        - name: config
          configMap:
            name: sslocal
