proxy/sslocal/sslocal.IngressRouteTCP.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sslocal
spec:
  entryPoints:
    - socks5-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: sslocal
          port: socks5-tcp
